fix overflow issue

--- a/src/renderer/assets/styles/index.css
+++ b/src/renderer/assets/styles/index.css
@@ -17,6 +17,7 @@ html, body, #main {
     padding: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
